// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header renders per snapshot 1`] = `
<header
  className="headerBar"
>
  <React.Fragment>
    <WithStoreSubscriptionForHeaderIconComponent
      deps={
        Object {
          "textContent": Object {
            "applicationTitle": "THE_APPLICATION_TITLE",
          },
        }
      }
    />
    <span
      className="headerTitle"
    >
      THE_APPLICATION_TITLE
    </span>
  </React.Fragment>
  <div />
  <div
    className="spacer"
  />
  <div
    className="farItems"
  />
</header>
`;

exports[`Header renders without header title 1`] = `
<header
  className="headerBar"
>
  <div />
  <div
    className="spacer"
  />
  <div
    className="farItems"
  />
</header>
`;
